# textractor-websocket

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.adoc
src/: lib.rs  main.rs  textractor_ws.rs
