[package]
name = "textractor_websocket"
version = "0.1.0"
authors = ["sadolit <sadolit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web_socket"
crate-type = ["cdylib"]

[dependencies]
ws = "0.9.1"
once_cell = "1.3.1"
crossbeam-channel = "0.4"
winapi = "0.3.8"
widestring = "0.4.0"
